--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/entity_browser.browser.local_video_library_embed.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/entity_browser.browser.local_video_library_embed.yml
@@ -8,24 +8,34 @@ dependencies:
     - dropzonejs_eb_widget
     - media_entity
     - views
-name: local_video_library
-label: 'Local Video Library'
-display: modal
+name: local_video_library_embed
+label: 'Local Video Library Embed'
+display: iframe
 display_configuration:
-  width: '650'
-  height: '500'
+  width: 99%
+  height: '600'
   link_text: 'Select videos'
-  auto_open: false
+  auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
 widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
-  9fb81a40-c7ee-40b0-b8c0-b20b248590bb:
+  c168501e-5ff3-4c18-a83f-8a41c1d911c5:
+    settings:
+      view: local_videos_library
+      view_display: local_videos_library
+      submit_text: 'Select Videos'
+      auto_select: false
+    uuid: c168501e-5ff3-4c18-a83f-8a41c1d911c5
+    weight: -9
+    label: 'Select Videos'
+    id: view
+  0074d3c7-9d0f-445f-80d2-6fc32da0f20e:
     settings:
       media_entity_bundle: video_local
       upload_location: 'public://[date:custom:Y]-[date:custom:m]'
-      dropzone_description: 'Drop files here to upload them'
+      dropzone_description: 'Drop videos here to upload them'
       max_filesize: 100M
       extensions: 'mp4 webm ogg ogv'
       clientside_resize: false
@@ -36,17 +46,7 @@ widgets:
       thumbnail_method: contain
       submit_text: 'Save video'
       auto_select: false
-    uuid: 9fb81a40-c7ee-40b0-b8c0-b20b248590bb
+    uuid: 0074d3c7-9d0f-445f-80d2-6fc32da0f20e
     weight: -10
     label: 'Upload video'
     id: dropzonejs_media_entity
-  acc199f8-dd59-471a-a677-270e080fd9c2:
-    settings:
-      view: local_videos_library
-      view_display: local_videos_library
-      submit_text: 'Select videos'
-      auto_select: false
-    uuid: acc199f8-dd59-471a-a677-270e080fd9c2
-    weight: 2
-    label: 'All Videos'
-    id: view
