#595 Add local video embed button to editor

--- a/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
+++ b/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
@@ -43,6 +43,7 @@ settings:
             - Blockquote
             - embed_video
             - embed_image
+            - embed_local_video
             - embed_document
         -
           name: Tools
