#595 - Switch to Use HTML5 video player with image on startup

--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
@@ -19,12 +19,12 @@ content:
       width: '640'
       height: '480'
       controls: '1'
-      preload: none
+      preload: metadata
       autoplay: 0
       loop: 0
       muted: 0
     third_party_settings: {  }
-    type: videojs_player_list
+    type: video_player_list
     region: content
 hidden:
   created: true
