#595 Remove videojs module and replace it dependencies with video module

--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.media.video_local.field_media_tags
     - media_entity.bundle.video_local
   module:
-    - videojs
+    - video
 id: media.video_local.default
 targetEntityType: media
 bundle: video_local
