Issue #595 Backport video player paragraph from YD  (#927)
* [YD-83] Add local video media entity feature

* [YD-83] Add paragraph with video player field

* [YD-230] Update titles for paragraphs

* [YD-230] Update parameter config import

* Decouple openy_prgf_video_player from YD

* #595 Backport openy_prgf_video_player from YD

* Decouple openy_media_local_video from YD

* #595 Backport openy_media_local_video for YD

* #595 Restore paragraph name for local video paragraph

* #595 Add modules for local video player

* #595 Update descriptions

* #595 Update package and name for paragraph

* #595 Update local video paragraph configs

* #595 Update local video player size for sidebar and full screen mode

* #595 Add video player paragraph doc

* #595 Fix typo

* #595 Add entity browser for adding local video and other config updates

* #595 Update style to make responsive video player

* #595 Update description

* #595 - Add local videos library configs, teaser display and tags field

* #595 - Update styles and js to use local video library

* #595 Remove empty install file

* #595 Fix typo in composer.json

* Update upload button text for local video

* #595 Remove commented code

* #595 - Updates to implement local video embed button

* #595 Add local video embed button to editor

* #595 - Remove videoplayer paragraph

* #595 - Remove docs

* #595 - Switch to Use HTML5 video player with image on startup

* #595 - Update style for videoplayer

* #595 - Rename and reorder buttons in ckeditor

* #595 Remove videojs module and replace it dependencies with video module

--- a/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
+++ b/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
@@ -42,6 +42,7 @@ settings:
           items:
             - Blockquote
             - embed_video
+            - embed_local_video
             - embed_image
             - embed_document
         -
