--- a/composer.json
+++ b/composer.json
@@ -225,6 +225,8 @@
         "doctrine/inflector": "1.1.*",
         "drupal/crop": "1.3",
         "drupal/focal_point": "1.0-beta5",
+        "drupal/media_entity_video": "1.0-beta2",
+        "drupal/video": "1.2",
         "drupal/easy_breadcrumb": "^1.6"
     }
 }
