[OYPD-645]: Transform Promo Text paragraph type from LI to Secondary Description and Sidebar paragraph type. (#937)
* [OYPD-645]: move promo and featured paragraphs from LI to OpenY.

* [OYPD-645]: move Promo Text paragraph from LI to OpenY.

* [OYPD-645]: Add documentation and Behat test.

* [OYPD-645]: Rename Promo Text paragraph type to Secondary Description and Sidebar; Refactoring.

* [OYPD-645]: Add documentation and Behat test for Secondary Description and Sidebar paragraph type.

* [OYPD-645]: Add dependencies.

--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -19,6 +19,7 @@ fields_unset_paragraphs:
     - prgf_location_finder_filters
     - openy_prgf_mbrshp_calc
     - membership_info
+    - secondary_description_sidebar
     - session_time
     - schedule_search_form
     - schedule_search_list
