[OYPD-645] Enable image preview for featured highlight block

--- a/modules/openy_features/openy_block/modules/openy_block_featured_highlights/openy_block_featured_highlights.info.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_featured_highlights/openy_block_featured_highlights.info.yml
@@ -6,7 +6,12 @@ package: OpenY
 dependencies:
   - block_content
   - content_moderation
+  - datalayer
+  - entity_browser
   - field
   - language
   - link
-version: 8.x-1.0
+  - media_entity
+  - openy_block
+  - openy_media_image
+  - text
