--- a/modules/openy_features/openy_block/modules/openy_block_featured_highlights/config/install/core.entity_form_display.block_content.featured_highlights_block.default.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_featured_highlights/config/install/core.entity_form_display.block_content.featured_highlights_block.default.yml
@@ -29,12 +29,13 @@ content:
     weight: 2
     settings:
       entity_browser: images_library
-      field_widget_display: label
+      field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
       selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail_for_preview
       open: false
-      field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
