--- a/modules/openy_features/openy_prgf/modules/openy_prgf_featured_highlights/config/install/field.field.paragraph.featured_highlights.field_prgf_block_ref_unlim.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_featured_highlights/config/install/field.field.paragraph.featured_highlights.field_prgf_block_ref_unlim.yml
@@ -19,7 +19,7 @@ field_name: field_prgf_block_ref_unlim
 entity_type: paragraph
 bundle: featured_highlights
 label: 'Featured Highlights block'
-description: 'Create a new one or pick up an existed blocks.'
+description: 'Create a new one or pick up an existing block of selected type.'
 required: true
 translatable: true
 default_value: {  }
