Add CKEditdor Bootstrap Buttons module and configuration.

--- a/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
+++ b/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
@@ -53,6 +53,7 @@ settings:
             - SpecialChar
             - Maximize
             - Language
+            - btbutton
   plugins:
     language:
       language_list: un
