--- a/composer.json
+++ b/composer.json
@@ -205,7 +205,7 @@
         "drupal/libraries": "3.x-dev",
         "drupal/datalayer": "1.x-dev",
         "drupal/optimizely": "3.0",
-        "drupal/google_tag": "1.x-dev",
+        "drupal/google_tag": "1.0",
         "drupal/google_analytics": "2.2",
         "drupal/simple_sitemap": "2.9",
         "drupal/redirect": "1.0-beta1",
