Part 2: OpenY files.

--- a/docroot/profiles/contrib/openy/composer.json
+++ b/docroot/profiles/contrib/openy/composer.json
@@ -152,7 +152,6 @@
                 "2874811 - Add option to show/hide empty views": "https://www.drupal.org/files/issues/Option-added-to-hide-empty-views-2874811.patch"
             },
             "drupal/core": {
-                "2346893 - Fix duplicate AJAX wrapper around a file field issue": "https://www.drupal.org/files/issues/2346893-233.patch",
                 "1236098 - Notice: Undefined index in _color_rewrite_stylesheet()": "https://www.drupal.org/files/issues/undefined-index-in-_color_rewrite_stylesheet-1236098-37.patch"
             }
         }
@@ -162,7 +161,7 @@
         "cweagans/composer-patches": "^1.5.0",
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "drupal/core": "8.4.2",
+        "drupal/core": "8.4.5",
         "drupal/features": "3.5",
         "drupal/confi": "1.4",
         "drupal/config_update": "1.5",
@@ -206,7 +205,7 @@
         "drupal/libraries": "3.x-dev",
         "drupal/datalayer": "1.x-dev",
         "drupal/optimizely": "3.0",
-        "drupal/google_tag": "1.x-dev",
+        "drupal/google_tag": "1.0",
         "drupal/google_analytics": "2.2",
         "drupal/simple_sitemap": "2.9",
         "drupal/redirect": "1.0-beta1",
