--- a/docroot/sites/default/config/staging/core.entity_view_display.node.article.content_browser_preview.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.article.content_browser_preview.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.content_browser_preview
     - field.field.node.article.field_alert
-    - field.field.node.article.field_content
+    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
     - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
@@ -26,7 +26,7 @@ targetEntityType: node
 bundle: article
 mode: content_browser_preview
 content:
-  field_content:
+  field_ygtc_content:
     weight: 1
     label: hidden
     settings:
