--- a/docroot/sites/default/config/staging/core.entity_view_display.node.camp.content_browser_preview.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.camp.content_browser_preview.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.node.camp.field_alternate_location
     - field.field.node.camp.field_body
     - field.field.node.camp.field_camp_links
-    - field.field.node.camp.field_content
+    - field.field.node.camp.field_ygtc_content
     - field.field.node.camp.field_facebook_page_id
     - field.field.node.camp.field_include_general_blog_posts
     - field.field.node.camp.field_location
@@ -33,7 +33,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: address_default
-  field_content:
+  field_ygtc_content:
     weight: 0
     label: hidden
     settings:
