--- a/docroot/sites/default/config/staging/core.entity_view_display.node.location.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.location.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.location.field_alert
-    - field.field.node.location.field_content
+    - field.field.node.location.field_ygtc_content
     - field.field.node.location.field_facebook_page_id
     - field.field.node.location.field_fitness_phone
     - field.field.node.location.field_include_general_blog_posts
@@ -34,7 +34,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  field_content:
+  field_ygtc_content:
     weight: 10
     label: above
     settings: {  }
