--- a/docroot/sites/default/config/staging/core.entity_view_display.node.location.schedules.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.location.schedules.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.schedules
     - field.field.node.location.field_alert
-    - field.field.node.location.field_content
+    - field.field.node.location.field_ygtc_content
     - field.field.node.location.field_facebook_page_id
     - field.field.node.location.field_include_general_blog_posts
     - field.field.node.location.field_join_override
@@ -42,7 +42,7 @@ content:
     type: text_default
 hidden:
   field_alert: true
-  field_content: true
+  field_ygtc_content: true
   field_facebook_page_id: true
   field_include_general_blog_posts: true
   field_join_override: true
