--- a/docroot/sites/default/config/staging/core.entity_view_display.node.location.teaser.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.location.teaser.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.location.field_alert
-    - field.field.node.location.field_content
+    - field.field.node.location.field_ygtc_content
     - field.field.node.location.field_facebook_page_id
     - field.field.node.location.field_include_general_blog_posts
     - field.field.node.location.field_join_override
@@ -29,7 +29,7 @@ content:
     weight: 100
 hidden:
   field_alert: true
-  field_content: true
+  field_ygtc_content: true
   field_facebook_page_id: true
   field_include_general_blog_posts: true
   field_join_override: true
