--- a/docroot/sites/default/config/staging/core.entity_view_display.node.product.teaser.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.product.teaser.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.product.field_category
-    - field.field.node.product.field_content
+    - field.field.node.product.field_ygtc_content
     - field.field.node.product.field_locations
     - node.type.product
   module:
@@ -19,6 +19,6 @@ content:
     weight: 100
 hidden:
   field_category: true
-  field_content: true
+  field_ygtc_content: true
   field_locations: true
   langcode: true
