--- a/docroot/sites/default/config/staging/core.entity_form_display.node.article.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_form_display.node.article.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.article.field_alert
-    - field.field.node.article.field_content
+    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
     - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
@@ -51,7 +51,7 @@ content:
       override_labels: false
     third_party_settings: {  }
     type: inline_entity_form_complex
-  field_content:
+  field_ygtc_content:
     weight: 15
     settings:
       rows: 5
