--- a/docroot/sites/default/config/staging/core.entity_view_display.node.article.rss.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.article.rss.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.rss
     - field.field.node.article.field_alert
-    - field.field.node.article.field_content
+    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
     - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
@@ -30,7 +30,7 @@ content:
     weight: 100
 hidden:
   field_alert: true
-  field_content: true
+  field_ygtc_content: true
   field_header_button: true
   field_header_image: true
   field_header_variant: true
