--- a/docroot/sites/default/config/staging/core.entity_view_display.node.blog.content_browser_preview.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.blog.content_browser_preview.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.content_browser_preview
-    - field.field.node.blog.field_content
+    - field.field.node.blog.field_ygtc_content
     - field.field.node.blog.field_image
     - field.field.node.blog.field_related_camps_locations
     - field.field.node.blog.field_site_section
@@ -19,7 +19,7 @@ targetEntityType: node
 bundle: blog
 mode: content_browser_preview
 content:
-  field_content:
+  field_ygtc_content:
     weight: 0
     label: hidden
     settings:
