--- a/docroot/sites/default/config/staging/core.entity_view_display.node.blog.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.blog.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.blog.field_content
+    - field.field.node.blog.field_ygtc_content
     - field.field.node.blog.field_image
     - field.field.node.blog.field_related_camps_locations
     - field.field.node.blog.field_site_section
@@ -21,7 +21,7 @@ targetEntityType: node
 bundle: blog
 mode: default
 content:
-  field_content:
+  field_ygtc_content:
     weight: 1
     label: hidden
     settings: {  }
