--- a/docroot/sites/default/config/staging/core.entity_view_display.node.blog.location_blog_teaser.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.blog.location_blog_teaser.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.location_blog_teaser
-    - field.field.node.blog.field_content
+    - field.field.node.blog.field_ygtc_content
     - field.field.node.blog.field_image
     - field.field.node.blog.field_related_camps_locations
     - field.field.node.blog.field_site_section
@@ -27,7 +27,7 @@ content:
       trim_length: 180
     third_party_settings: {  }
 hidden:
-  field_content: true
+  field_ygtc_content: true
   field_image: true
   field_related_camps_locations: true
   field_site_section: true
