--- a/docroot/sites/default/config/staging/core.entity_view_display.node.blog.teaser.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.blog.teaser.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.blog.field_content
+    - field.field.node.blog.field_ygtc_content
     - field.field.node.blog.field_image
     - field.field.node.blog.field_related_camps_locations
     - field.field.node.blog.field_site_section
@@ -21,7 +21,7 @@ targetEntityType: node
 bundle: blog
 mode: teaser
 content:
-  field_content:
+  field_ygtc_content:
     type: text_trimmed
     weight: 1
     label: hidden
