[YMCA-1799] Replace field_oy_content with field_content

--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_node/config/install/field.storage.node.field_content.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_node/config/install/field.storage.node.field_content.yml
@@ -5,8 +5,8 @@ dependencies:
     - entity_reference_revisions
     - node
     - paragraphs
-id: node.field_oy_content
-field_name: field_oy_content
+id: node.field_content
+field_name: field_content
 entity_type: node
 type: entity_reference_revisions
 settings:
