--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.field.node.landing_page.field_content.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.field.node.landing_page.field_content.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_oy_content
+    - field.storage.node.field_content
     - node.type.landing_page
   module:
     - entity_reference_revisions
-id: node.landing_page.field_oy_content
-field_name: field_oy_content
+id: node.landing_page.field_content
+field_name: field_content
 entity_type: node
 bundle: landing_page
 label: Content
