--- a/docroot/devops/reinstall/vars_redwing/global_settings.yml
+++ b/docroot/devops/reinstall/vars_redwing/global_settings.yml
@@ -19,7 +19,7 @@ site_url: 'http://redwing.192.168.56.132.xip.io' # No trailing slash!
 origin_site_url: 'http://redwingymca.org'
 # This variable will be used for variable_get('environment'). Can be overridden by CI server.
 # development = 'default', demo = 'demo', staging = 'staging', production = 'production'.
-pp_environment: 'openy'
+pp_environment: 'default'
 
 # If Docker used for sql flow
 docker_sql: true
