Add Campaign Leadership page.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_campaign/config/install/field.field.paragraph.campaign_activity.field_prgf_campaign_activity.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_campaign/config/install/field.field.paragraph.campaign_activity.field_prgf_campaign_activity.yml
@@ -21,13 +21,13 @@ required: true
 translatable: false
 default_value:
   -
-    plugin_id: campaign_activity_block
+    plugin_id: campaign_activity_visits_block
     plugin_configuration:
-      id: campaign_activity_block
+      id: campaign_activity_visits_block
       label: 'Campaign Activity Tracking'
       provider: openy_campaign
       label_display: '0'
-    plugin_configuration_schema_id: block.settings.campaign_activity_block
+    plugin_configuration_schema_id: block.settings.campaign_activity_visits_block
 default_value_callback: ''
 settings: {  }
 field_type: 'plugin:block'
