--- a/openy.info.yml
+++ b/openy.info.yml
@@ -2,6 +2,7 @@ name: OpenY
 type: profile
 description: 'Open Y Drupal distribution.'
 core: 8.x
+version: '8.1.10'
 distribution:
   name: OpenY
   install:
