--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_alert/openy_node_alert.info.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_alert/openy_node_alert.info.yml
@@ -13,7 +13,7 @@ dependencies:
   - openy_loc_camp
   - openy_loc_facility
   - openy_node_activity
-  - openy_node_blog
+  #- openy_node_blog
   - openy_node_category
   - openy_node_class
   - openy_node_landing
