--- a/openy.info.yml
+++ b/openy.info.yml
@@ -100,6 +100,7 @@ dependencies:
   - video
   - media_entity_video
   - easy_breadcrumb
+  - fontyourface
   # OpenY features.
   - openy_svg_formatter
   - openy_media_image
