Add Activity Icon to the activities category vocabulary.

--- a/modules/openy_features/openy_taxonomy/modules/openy_txnm_fitness_category/openy_txnm_fitness_category.info.yml
+++ b/modules/openy_features/openy_taxonomy/modules/openy_txnm_fitness_category/openy_txnm_fitness_category.info.yml
@@ -3,5 +3,11 @@ description: 'OpenY Taxonomy Fitness Category'
 type: module
 core: 8.x
 dependencies:
+  - datalayer
+  - field
+  - file
   - language
+  - openy_svg_formatter
+  - path
   - taxonomy
+  - text
