--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
@@ -51,6 +51,7 @@ dependencies:
     - field.field.node.campaign.field_token_check_back_date
     - field.field.node.campaign.field_token_login_link_text
     - field.field.node.campaign.field_token_register_link_text
+    - field.field.node.campaign.field_tracking_actv_goal_desc
     - field.field.node.campaign.field_utilization_activities
     - field.field.node.campaign.field_ways_to_earn_entries
     - image.style.thumbnail
@@ -76,7 +77,7 @@ third_party_settings:
         - field_campaign_payment_types
         - group_age_range
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -120,7 +121,7 @@ third_party_settings:
         - field_goal_check_ins_start_date
         - field_goal_check_ins_end_date
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: fieldset
       format_settings:
         label: 'Visits goal'
@@ -136,7 +137,7 @@ third_party_settings:
         - group_registration_messages
         - group_general_messages
       parent_name: ''
-      weight: 19
+      weight: 20
       format_type: fieldset
       format_settings:
         id: ''
@@ -214,7 +215,7 @@ third_party_settings:
         - field_ways_to_earn_entries
         - field_flip_cards_cover_image
       parent_name: ''
-      weight: 20
+      weight: 21
       format_type: details
       format_settings:
         id: ''
@@ -295,7 +296,7 @@ content:
     type: number
     region: content
   field_campaign_fitness_category:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -408,7 +409,7 @@ content:
     region: content
   field_campaign_stream_type:
     type: options_select
-    weight: 18
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -428,7 +429,7 @@ content:
     third_party_settings: {  }
   field_campaign_winners_prizes:
     type: entity_reference_paragraphs
-    weight: 17
+    weight: 18
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -607,6 +608,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_tracking_actv_goal_desc:
+    weight: 14
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_utilization_activities:
     type: options_buttons
     weight: 16
@@ -663,7 +672,7 @@ content:
     third_party_settings: {  }
     region: content
   url_redirects:
-    weight: 21
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
