Part 4: Update contrib modules.

--- a/docroot/devops/reinstall/docker_sql_workflow.yml
+++ b/docroot/devops/reinstall/docker_sql_workflow.yml
@@ -82,6 +82,9 @@
 - name: Updating rest module
   sudo: yes
   shell: "bin/drupal update:execute rest"
+- name: Updating dropzonejs module
+  sudo: yes
+  shell: "bin/drupal update:execute dropzonejs"
 - name: Updating YMCA master module
   sudo: yes
   shell: "bin/drupal update:execute ymca_master"
@@ -97,6 +100,9 @@
 - name: Updating file_browser module
   sudo: yes
   shell: "bin/drupal update:execute file_browser"
+- name: Updating dropzonejs_eb_widget module
+  sudo: yes
+  shell: "bin/drupal update:execute dropzonejs_eb_widget"
 - name: Updating crop module
   sudo: yes
   shell: "bin/drupal update:execute crop"
@@ -109,6 +115,9 @@
 - name: Updating openy_media_video module
   sudo: yes
   shell: "bin/drupal update:execute openy_media_video"
+- name: Updating openy_media_image module
+  sudo: yes
+  shell: "bin/drupal update:execute openy_media_image"
 - name: Updating openy_node module
   sudo: yes
   shell: "bin/drupal update:execute openy_node"
@@ -133,9 +142,6 @@
 - name: Updating openy_prgf module
   sudo: yes
   shell: "bin/drupal update:execute openy_prgf"
-- name: Updating openy_media_image module
-  sudo: yes
-  shell: "bin/drupal update:execute openy_media_image"
 # @todo remove commands above after deploy to production.
 # Update database.
 - name: Updating database
