[YMCA-1804] Add a new Block wrapper prgf, add a new layout for landing page with left sidebar

--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.storage.node.field_lp_layout.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.storage.node.field_lp_layout.yml
@@ -20,6 +20,9 @@ settings:
       value: two_column
       label: 'Two Columns'
     -
+      value: two_column_left
+      label: 'Two Columns Left'
+    -
       value: two_column_fixed
       label: 'Two Columns with fixed sidebar (sticky at the top)'
   allowed_values_function: ''
